jscomp/syntax/tests/parsing/errors/typeDef/polyvariant.res
type t = [< ]

type z = [< | #A | #B > ]

type rec t = []

